syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "BookingApp.Rooms.Grpc.Service";

service BookingsService {  
  rpc GetLastUserBookingAsync (UserRequest) returns (BookingResponse)
  {
	  option (google.api.http) =
	  {
		  get: "/bookings/last-user-booking/{id}"
	  };
  };
}

message UserRequest {
  string id = 1;
}

message BookingResponse {
  string id = 1;
  string userId = 2;
  google.protobuf.Timestamp fromDate = 3;
  google.protobuf.Timestamp toDate = 4;
  repeated RoomResponse rooms = 5;
}

message RoomResponse{
	string id = 1;
	int32 capacity = 2;
	double price = 3;
	string name = 4;
	string description = 5;
}