syntax = "proto3";

option csharp_namespace = "BookingApp.Users.Client";

service UsersService {
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc GetAllUsers (AllUsersRequest) returns (stream UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
}

message AllUsersRequest{
	string name = 1;
	repeated string ids = 2;
}
